--- a/package.json
+++ b/package.json
@@ -11,7 +11,14 @@
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.47",
-        "tailwindcss": "^3.4.13",
+        "tailwindcss": "^3.4.17",
         "vite": "^6.0"
+    },
+    "dependencies": {
+        "@inertiajs/vue3": "^2.0.3",
+        "@tailwindcss/vite": "^4.0.6",
+        "@vitejs/plugin-vue": "^5.2.1",
+        "nprogress": "^0.2.0",
+        "vue": "^3.5.13"
     }
 }
